--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <div id="logo">LOGO</div>
                 <div id="header-button-container">
                     <a href="signup.html" class="header-button signup">Signup</a>
-                    <a href="mainBeforeLogin.html" class="header-button login">Login</a>
+                    <a href="homePage.html" class="header-button login">Login</a>
                 </div>
             </header>
 
