removed redundant classes

--- a/homePage.html
+++ b/homePage.html
@@ -12,17 +12,17 @@
             <header id="header">
                 <div id="logo">LOGO</div>
                 <div id="header-button-container">
-                    <a href="index.html" class="header-button login">Logout</a>
+                    <a href="index.html" class="button-style">Logout</a>
                 </div>
             </header>
 
             <!-- <main id="main-center"> -->
                 <div id="profile">
                     <div class="title-text">WELCOME USERNAME!</div>
-                    <a href="homePage.html" class="form-button signup">DISCOVER</a>
-                    <a href="createPost.html" class="form-button signup">CREATE</a>
-                    <a href="managePost.html" class="form-button signup">MANAGE</a>
-                    <a href="" class="form-button signup">EDIT PROFILE</a>
+                    <a href="homePage.html" class="button-style">DISCOVER</a>
+                    <a href="createPost.html" class="button-style">CREATE</a>
+                    <a href="managePost.html" class="button-style">MANAGE</a>
+                    <a href="" class="button-style">EDIT PROFILE</a>
                 </div>
 
                 <div id="announcement-bar">
