--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <header id="header">
                 <div id="logo">LOGO</div>
                 <div id="header-button-container">
-                    <a href="signup.html" class="signup">Signup</a>
-                    <a href="homePage.html" class="login">Login</a>
+                    <a href="signup.html" class="button-style">Signup</a>
+                    <a href="homePage.html" class="button-style">Login</a>
                 </div>
             </header>
 
@@ -39,13 +39,13 @@
                                 <input type="password" id="pword" name="pword" />
                             </div>
 
-                            <input type="submit" id="login" class="login" name="login" value="Login" />
+                            <input type="submit" id="login" class="button-style" name="login" value="Login" />
         
                         </div>
                     </form>
                     <div id="signup-grid"> 
                         <label class="title-text">NEW HERE?</label>
-                        <a href="signup.html" class="signup">Signup</a>
+                        <a href="signup.html" class="button-style">Signup</a>
                     </div>
                 </div>
 
