--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         
                         </div>
                     </form>
-                    <div id="signup-grid"> 
+                    <div id="button-grid"> 
                         <label class="title-text">NEW HERE?</label>
                         <a href="signup.html" class="button-style">Signup</a>
                     </div>
