button style change

--- a/homePage.html
+++ b/homePage.html
@@ -19,10 +19,13 @@
             <!-- <main id="main-center"> -->
                 <div id="profile">
                     <div class="title-text">WELCOME USERNAME!</div>
-                    <a href="homePage.html" class="button-style">DISCOVER</a>
-                    <a href="createPost.html" class="button-style">CREATE</a>
-                    <a href="managePost.html" class="button-style">MANAGE</a>
-                    <a href="" class="button-style">EDIT PROFILE</a>
+                    <img src="images/red-netflix-profile.jpg" alt="red netflix profile picture" class="profile-picture" />
+                    <div id="button-grid"> 
+                        <a href="homePage.html" class="button-style">DISCOVER</a>
+                        <a href="createPost.html" class="button-style">CREATE</a>
+                        <a href="managePost.html" class="button-style">MANAGE</a>
+                        <a href="" class="button-style">EDIT PROFILE</a>
+                    </div>
                 </div>
 
                 <div id="announcement-bar">
