some styling added, attempting to make it less ugly.

--- a/viewPost.html
+++ b/viewPost.html
@@ -10,7 +10,10 @@
     <body>
         <div id="container">
             <header id="header">
-                <div id="logo">LOGO</div>
+                <div id="logo">
+                    <img src="../LogoNoWordsNoLine-removebg-preview.png" alt="Logo" id="logo-image" />
+                    <div id="company-name">TRAILBLAB</div>
+                </div>
                 <div id="header-button-container">
                     <a href="index.html" class="button-style">Logout</a>
                 </div>
