fixing file path errors

--- a/homePage.html
+++ b/homePage.html
@@ -11,7 +11,7 @@
         <div id="container">
             <header id="header">
                 <div id="logo">
-                    <img src="../LogoNoWordsNoLine-removebg-preview.png" alt="Logo" id="logo-image" />
+                    <img src="images/LogoNoWordsNoLineTransparent.png" alt="Logo" id="logo-image" />
                     <div id="company-name">TREKNET</div>
                 </div>
                 <div id="header-button-container">
