--- a/homePage.html
+++ b/homePage.html
@@ -12,7 +12,7 @@
             <header id="header">
                 <div id="logo">
                     <img src="images/LogoNoWordsNoLineTransparent.png" alt="Logo" id="logo-image" />
-                    <div id="company-name">TREKNET</div>
+                    <div id="company-name">BASECAMP</div>
                 </div>
                 <div id="header-button-container">
                     <a href="index.html" class="button-style">Logout</a>
