--- a/viewPost.html
+++ b/viewPost.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>Main Page After Login</title>
+        <title>View Post</title>
         <meta charset="UTF-8" />
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
     </head>
@@ -12,7 +12,7 @@
             <header id="header">
                 <div id="logo">
                     <img src="images/LogoNoWordsNoLineTransparent.png" alt="Logo" id="logo-image" />
-                    <div id="company-name">TRAILBLAB</div>
+                    <div id="company-name">BASECAMP</div>
                 </div>
                 <div id="header-button-container">
                     <a href="index.html" class="button-style">Logout</a>
