added meta tags and fixed header XHTML error

--- a/homePage.html
+++ b/homePage.html
@@ -3,13 +3,14 @@
 
     <head>
         <title>Main Page After Login</title>
-        <meta charset="UTF-8" />
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="description" content="the front page of basecamp before the user has logged in" />
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
     </head>
 
     <body>
         <div id="container">
-            <header id="header">
+            <header>
                 <div id="logo">
                     <img src="images/LogoNoWordsNoLineTransparent.png" alt="Logo" id="logo-image" />
                     <div id="company-name">BASECAMP</div>
