--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 
     <head>
-        <title>Main Page Before Login</title>
-        <meta charset="UTF-8" />
+        <title>Main Page After Login</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="description" content="The front page after the user has logged in with profile on the sidebar" />
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
     </head>
 
     <body>
         <div id="container">
-            <header id="header">
+            <header>
                 <div id="logo">
                     <img src="images/LogoNoWordsNoLineTransparent.png" alt="Logo" id="logo-image" />
                     <div id="company-name">BASECAMP</div>
