--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
 
     <body>
         <div id="container">
-            <header>
+            <header id="header">
                 <div id="logo">
                     <img src="images/LogoNoWordsNoLineTransparent.png" alt="Logo" id="logo-image" />
                     <div id="company-name">BASECAMP</div>
