made XHTML compliant

--- a/viewPost.html
+++ b/viewPost.html
@@ -152,8 +152,10 @@
                 </div>
 
                 <form class="comment-form" action="" method="post">
-                    <input type="text" id="leave-comment" name="leave-comment" />
-                    <input type="submit" id="post-comment" class="button-style" name="post-comment" value="Post" />
+                    <div class="comment-form-container">
+                        <input type="text" id="leave-comment" name="leave-comment" />
+                        <input type="submit" id="post-comment" class="button-style" name="post-comment" value="Post" />
+                    </div>
                 </form>
 
             </div>
