fixed errors in Signup and Create post pages

--- a/signup.html
+++ b/signup.html
@@ -80,9 +80,9 @@
             <div id="upload-photo">
                 <div class="title-text">Create your account and share your IDEAS with everyone!</div>
                 <!-- Label and Input for photo uploading -->
-                <div class="placeholder-container"></div>
-                    <label for="profile-photo" class="placeholder">Upload Profile Photo</label>
-                    <input type="file" id="upload-photo-button" name="profile-photo" accept="image/*">
+                <div class="placeholder-container">
+                    <label for="profile-photo" class="placeholder">Upload Profile Photo</label> <br/>
+                    <input type="file" id="upload-photo-button" name="profile-photo" accept="image/*"> <br/>
                     <img class="profile-photo" alt="Uploaded Photo" src="images/blank-profile-picture.png">
                 </div>
             </div>
