--- a/homePage.html
+++ b/homePage.html
@@ -31,7 +31,7 @@ homePage.html
                 </div>
             </header>
 
-            <div id="profile">
+            <div id="profile" class="profile-else">
                 <!-- profile username -->
                 <div class="title-text">USERNAME</div>
                 
