--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ index.html
                 </div>
             </header>
 
-            <div id="profile">
+            <div id="profile" class="profile-else">
                 <!-- where the user can login or sign up - becomes the profile when logged in -->
                 <div class="title-text">LOGIN</div>
                 <form class="auth-form" action="homePage.html" method="post">
