--- a/viewPost.html
+++ b/viewPost.html
@@ -31,7 +31,7 @@ viewPost.html
                 </div>
             </header>
 
-            <div id="profile">
+            <div id="profile" class="profile-else">
                 <!-- User's username in profile -->
                 <div class="title-text">USERNAME</div>
                 
