--- a/managePost.html
+++ b/managePost.html
@@ -20,7 +20,7 @@
                 </div>
             </header>
 
-            <div id="profile">
+            <div id="profile" class="profile-else">
                 <div class="title-text">USERNAME</div>
                 
                 <div class="button-grid"> 
