--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
                 </div>
                 <div id="header-button-container">
                     <a href="signup.html" class="button-style">Signup</a>
-                    <a href="homePage.html" class="button-style">Login</a>
+                    <a href="index.html" class="button-style">Login</a>
                 </div>
             </header>
             <form id="signup-form" class="signup-form-container" action="homePage.html" method="post">
@@ -58,7 +58,6 @@
                         <div class="placeholder-container">
                             <label for="u-name" class="placeholder">Username</label>
                             <input type="text" id="u-name" name="u-name" />
-                            &nbsp;
                             <div id="error-text-uname" class="error-text hidden">
                                 Username invalid. Only word characters allowed.
                             </div>
@@ -72,7 +71,6 @@
                         <div class="placeholder-container">
                             <label for="email" class="placeholder">Email</label>
                             <input type="email" id="email" name="email" />
-                            &nbsp;
                             <div id="error-text-email" class="error-text hidden">
                                 Email invalid.
                             </div>
@@ -86,7 +84,6 @@
                         <div class="placeholder-container">
                             <label for="p-word" class="placeholder">Password</label>
                             <input type="password" id="p-word" name="p-word" />
-                            &nbsp;
                             <div id="error-text-pword" class="error-text hidden">
                                 Password invalid. Must be 6 characters long and contain at least one non-letter character.
                             </div>
@@ -95,7 +92,6 @@
                         <div class="placeholder-container">
                             <label for="confirm-pword" class="placeholder">Re-enter Password</label>
                             <input type="password" id="confirm-pword" name="confirm-pword" />
-                            &nbsp;
                             <div id="error-text-cpword" class="error-text hidden">
                                 Password does not match.
                             </div>
