login event handlers complete

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ index.html
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="description" content="The front page after the user has logged in with profile on the sidebar" />
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
+        <script src="js/eventHandlers.js"></script>
     </head>
 
     <body>
@@ -197,5 +198,6 @@ index.html
                 </div>
             </div>
         </div>
+        <script src="js/eventRegisterLogin.js"></script>
     </body>
 </html>
