error message clarity improved

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ index.html
                             <label for="email" class="placeholder">Email</label>
                             <input type="text" id="email" name="email" />
                             <div id="error-text-email" class="error-text hidden">
-                                Email invalid.
+                                Email invalid. Incorrect email format.
                             </div>
                         </div>
                         <!-- password label and input -->
@@ -51,7 +51,7 @@ index.html
                             <label for="pword" class="placeholder">Password</label>
                             <input type="password" id="pword" name="pword" />
                             <div id="error-text-pword" class="error-text hidden">
-                                Password invalid.
+                                Password invalid. Must be at least 6 characters long and contain at least one non-letter character.
                             </div>
                         </div>
 
