--- a/signup.html
+++ b/signup.html
@@ -72,7 +72,7 @@
                             <label for="email" class="placeholder">Email</label>
                             <input type="email" id="email" name="email" />
                             <div id="error-text-email" class="error-text hidden">
-                                Email invalid.
+                                Email invalid. Incorrect email format.
                             </div>
                         </div>
                         <!-- Label and Input for the phone-->
@@ -85,7 +85,7 @@
                             <label for="p-word" class="placeholder">Password</label>
                             <input type="password" id="p-word" name="p-word" />
                             <div id="error-text-pword" class="error-text hidden">
-                                Password invalid. Must be 6 characters long and contain at least one non-letter character.
+                                Password invalid. Must be at least 6 characters long and contain at least one non-letter character.
                             </div>
                         </div>
                         <!-- Label and Input for re-enter password-->
@@ -93,7 +93,7 @@
                             <label for="confirm-pword" class="placeholder">Re-enter Password</label>
                             <input type="password" id="confirm-pword" name="confirm-pword" />
                             <div id="error-text-cpword" class="error-text hidden">
-                                Password does not match.
+                                Passwords do not match.
                             </div>
                         </div>
                         <div class="placeholder-container">
