added type to script tags

--- a/createPost.html
+++ b/createPost.html
@@ -6,7 +6,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="description" content="The page to create a new post" />
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
-        <script src="js/eventHandlers.js"></script>
+        <script src="js/eventHandlers.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -65,6 +65,6 @@
                 </form>
             </div>
         </div>
-        <script src="js/eventRegisterCreatePost.js"></script>
+        <script src="js/eventRegisterCreatePost.js" type="text/javascript"></script>
     </body>
 </html>
