--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="description" content="The page to sign up for the forum" />
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
-        <script src="js/eventHandlers.js"></script>
+        <script src="js/eventHandlers.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -103,6 +103,6 @@
                 </div> 
             </form>
         </div>
-        <script src="js/eventRegisterSignup.js"></script>
+        <script src="js/eventRegisterSignup.js" type="text/javascript"></script>
     </body>
 </html>
