--- a/viewPost.html
+++ b/viewPost.html
@@ -15,7 +15,7 @@ viewPost.html
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="description" content="the page to view a specific post" />
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
-        <script src="js/eventHandlers.js"></script>
+        <script src="js/eventHandlers.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -179,6 +179,6 @@ viewPost.html
                 </form>
             </div>
         </div>
-        <script src="js/eventRegisterComment.js"></script>
+        <script src="js/eventRegisterComment.js" type="text/javascript"></script>
     </body>
 </html>
